changes made successfully

--- a/new.css
+++ b/new.css
@@ -1,12 +1,18 @@
-form {
-    max-width: 605px;
-    margin:50px auto;
-    padding: 30px;
-    background-color: #ddd8d8;
+.style {
+    max-width: 780px;
+    margin: 5px 5px 30px 199px;
+    padding: 30px 30px 30px 30px;
+    background-color: #3b3636;
     border: 13px solid #7f9dd7;
     box-shadow: 0 0 10px #ccc;
     font-family: Arial, sans-serif;
     display:grid;
+    justify-content: center;
+}
+.column {
+    margin: 12px;
+    padding: 20px;
+    background-color: #1d1414;
 }
 h1 {
 	display: block;
@@ -43,16 +49,17 @@ textarea {
 	font-size: 14px;
 }
 
-input[type="submit"] {
-	padding: 10px 20px;
-	background-color: #4CAF50;
-	color: white;
-	border: none;
-	border-radius: 3px;
-	cursor: pointer;
-	font-size: 16px;
+input[type="submit"] {    margin: 7px 18px 14px 140px;
+    padding: 11px 119px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 16px;
 }
 
 input[type="submit"]:hover {
 	background-color: #3e8e41;
 }
+
