--- a/new.css
+++ b/new.css
@@ -13,12 +13,25 @@
     margin: 12px;
     padding: 20px;
     background-color: #1d1414;
+    
+}
+h1.welcome {
+    margin: 7.5rem 1.5rem 10.5rem 3.5rem;
+    font-weight: 500;
+    line-height: 1.2;
+    margin: 90px;
+}
+h1.animation{
+    margin: 25rem 25rem 25rem 25rem;
+    font-weight: 500;
+    line-height: 1.2;
 }
 h1 {
 	display: block;
 	text-align: center;
 	align-items: center;
 	justify-content: center;
+    margin: 90px;
 }
 h2 {
 	margin-top: -14px;
